update register page and login

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,14 +8,13 @@
 
     <ion-tab-button tab="my-listings">
       <ion-icon name="ellipse"></ion-icon>
-      <ion-label>My Listings</ion-label>
+      <ion-label>My Lisings</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
       <ion-icon name="square"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
-    
   </ion-tab-bar>
 
 </ion-tabs>
