--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,53 +1,55 @@
 .login-logo{
-    text-align: center;
+    text-align:center;
     margin:auto;
-    right: 0px;
-    left:0px; 
+    right:0px;
+    left:0pc;
     margin-top:30%;
     margin-bottom:20%;
     .logo_icon{
-        width: 110px !important;
+        width:110px !important;
+
     }
     .login-name{
-        margin:10px;
+        margin: 10px;
         font-size: 1.7rem;
-        color:var(--ion-color-secondary)
+
     }
     .subTitle{
         margin:10px;
-        font-size: 1rem;
+        font-size:1rem;
+
     }
 
-}
 
+}
 .btn_class{
     color:black;
-    height: 50px;
+    height:50px;
     margin-top:20px;
-    --border-radius:5px; 
-    font-weight: 600;
-}
+    --border-radius:5px;
+    font-weight:600;
 
+
+}
 .login-logo img{
     max-width: 150px;
 }
-
 ion-list{
-   --ion-background-color:transparent; 
-   margin:0px;
+    --ion-background-color:transparent;
+    margin:0px;
 
 }
-
-.createAcc{
+.crateAcc{
     text-align: center;
     .registerTag{
         color:var(--ion-color-secondary);
-        font-weight: bold;
+        font-weight:bold;
     }
-}
 
+}
 .error-message{
     padding-right: 25px;
-    color: red;
+    color:red;
     text-align: center;
+
 }
