--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,20 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
-      <ion-icon name="triangle"></ion-icon>
+      <ion-icon name="home-outline"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="my-listings">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>My Lisings</ion-label>
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-label>Update Post</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="person-outline"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
+ 
