--- a/src/app/my-listings/my-listings.page.html
+++ b/src/app/my-listings/my-listings.page.html
@@ -67,7 +67,7 @@
   <ion-card color="light" class="ion-text-center" *ngFor="let item of images | async">
     <ion-card-header>
       <ion-card-title>
-        {{ item.name }}
+        {{ item.no }}
       </ion-card-title>
     </ion-card-header>
 
