--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
 
-    <ion-button slot="end" (click)="back()">Login</ion-button>
+    <ion-button shape="round" color="primary" slot="end" (click)="back()">Login</ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -37,7 +37,7 @@
         </ion-item>
         <ion-row>
           <ion-col>
-            <ion-button class="btn_class" [disabled]="!registration_form.valid" color="secondary" type="submit" (click)="signUp(registration_form.value)" expand="block">Registor</ion-button>
+            <ion-button class="btn_class" [disabled]="!registration_form.valid" color="secondary" type="submit" (click)="signUp(registration_form.value)" shape="round" size="large">Registor</ion-button>
           </ion-col>
         </ion-row>
 
