--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -34,7 +34,7 @@ ion-list{
   text-align:center;
   font-family: Arial, Helvetica, sans-serif;
   .signup{
-    color: red;
+    color: rgb(162, 158, 158);
   }
 
 }
