--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -37,7 +37,7 @@
         </ion-item>
         <ion-row>
           <ion-col>
-            <ion-button class="btn_class" [disabled]="!registration_form.valid" color="secondary" type="submit" (click)="signUp(registration_form.value)" shape="round" size="large">Registor</ion-button>
+            <ion-button [disabled]="!registration_form.valid" color="secondary" type="submit" (click)="signUp(registration_form.value)" shape="round" expand="block">Registor</ion-button>
           </ion-col>
         </ion-row>
 
