--- a/src/app/pages/my-listings/my-listings.page.html
+++ b/src/app/pages/my-listings/my-listings.page.html
@@ -8,7 +8,7 @@
    
       <ion-item color="secondary">
         <ion-icon  slot="start" style="zoom:1.5;" name="cart-outline"></ion-icon>
-        <ion-label><h1>Items List</h1></ion-label>
+        <ion-label><h1>All Items</h1></ion-label>
       </ion-item>
       
     
