--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -19,7 +19,7 @@
     <ion-row class="ion-no-margin ion-no-padding">
       <ion-col class="ion-no-margin ion-no-padding">
         <ion-button (click)="onLogin(loginForm)" type="submit" expand="block" color="secondary" class="btn_class">
-          Login
+          Sign In
           </ion-button>
 
 
