--- a/src/app/update-note2/update-note2.page.html
+++ b/src/app/update-note2/update-note2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <h2>Edit Note</h2>
+      <h2>Edit Item</h2>
     </ion-title>
 
 
@@ -21,7 +21,7 @@
           </ion-item>
           <div style="height: 20px;"></div>
           <ion-item>
-            <textarea #myInput id="myInput" class="textarea" placeholder="Enter More infrmation" rows="10" maxLength="500" (keyup)="resize()"[(ngModel)]="note.content" lines="none" ></textarea>
+            <textarea #myInput id="myInput" class="textarea" placeholder="Enter More Details" rows="10" maxLength="500" (keyup)="resize()"[(ngModel)]="note.content" lines="none" ></textarea>
 
           </ion-item>
 
