--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
 
-    <ion-button shape="round" color="primary" slot="end" (click)="back()">Login</ion-button>
+    <ion-button shape="round" color="primary" slot="end" (click)="back()">Sign In</ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -9,7 +9,7 @@
 
 
     <div class = "emailForm">
-      <h1 class = "ion-text-center header_lbl">Fill Your Details</h1>
+      <h1 class = "ion-text-center header_lbl">Add Your Personal Details</h1>
       <form [formGroup]="registration_form">
         <ion-item lines="none">
           <ion-label position="floating" class="label">First Name</ion-label>
@@ -24,7 +24,7 @@
           <ion-input type="text" formControlName="email" required></ion-input>
         </ion-item>
         <ion-item lines="none">
-          <ion-label position="floating" class="label">Mobile Number</ion-label>
+          <ion-label position="floating" class="label">Phone Number</ion-label>
           <ion-input type="text" formControlName="pnum" required></ion-input>
         </ion-item>
         <ion-item lines="none">
@@ -37,7 +37,7 @@
         </ion-item>
         <ion-row>
           <ion-col>
-            <ion-button [disabled]="!registration_form.valid" color="secondary" type="submit" (click)="signUp(registration_form.value)" shape="round" expand="block">Registor</ion-button>
+            <ion-button [disabled]="!registration_form.valid" color="secondary" type="submit" (click)="signUp(registration_form.value)" shape="round" expand="block">Register</ion-button>
           </ion-col>
         </ion-row>
 
