--- a/src/app/view/view.page.html
+++ b/src/app/view/view.page.html
@@ -20,7 +20,7 @@
     <br>
     <ion-button shape="round" slot="start" color="warning" [routerLink]="'/update-note/' + note.id">Edit</ion-button>
     <ion-button shape="round" slot="end" color="danger" (click) = "deleteNote()">Delete</ion-button>
-    <ion-button shape="round" slot="end" (click)="back()">Go Back</ion-button>
+    <ion-button shape="round" slot="end" (click)="back()">Back</ion-button>
   </ion-card-content>
   
 </ion-card>
