--- a/src/app/view2/view2.page.html
+++ b/src/app/view2/view2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>{{note.title}}</ion-title>
-    <ion-button slot="end" (click)="back()">Go Back</ion-button>
+    <ion-button slot="end" (click)="back()">Back</ion-button>
   </ion-toolbar>
 </ion-header>
 
