--- a/src/app/pages/my-listings/my-listings.page.html
+++ b/src/app/pages/my-listings/my-listings.page.html
@@ -41,7 +41,7 @@
       <ion-card-header>
         <ion-card-subtitle>
           {{note.createAt|date:'mediumDate'}}
-          
+          added by {{note.name}}
         </ion-card-subtitle>
        
         <ion-item lines="none">
