--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -10,7 +10,7 @@
 
 <ion-content >
   <div class="login-logo" *ngFor="let note of (user|async)">
-    <img src="{{note.imageuri}}" class="logo_icon">
+    <img src="{{note.imageurl}}" class="logo_icon">
 
 
 
